# OpenAeroStruct

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  setup.py
.claude/commands/: analyze_wing.md  compare_designs.md  optimize_wing.md
.claude/skills/oas-aero-analysis/: SKILL.md
.claude/skills/oas-cli-guide/: SKILL.md
.claude/skills/oas-cli-guide/evals/: evals.json
.claude/skills/oas-trade-study/: SKILL.md
.github/workflows/: mcp-tests.yml
oas_mcp/: README.md  TODO_remediation.md  __init__.py  cli.py  cli_runner.py  cli_state.py  keycloak_auth_setup.md  keycloak_setup.md  observability.md  reference.md  server.py  test_auth_curl.sh  visualization.md  workflow_v1.md  workflows.md
oas_mcp/core/: __init__.py  artifacts.py  auth.py  builders.py  connections.py  convergence.py  defaults.py  envelope.py  errors.py  mesh.py  oauth_proxy.py  plotting.py  requirements.py  results.py  session.py  summary.py  telemetry.py  validation.py  validators.py  viewer_auth.py  viewer_routes.py  widget.py
oas_mcp/demonstrations/rectangular_wing/: README.md  shared.py
oas_mcp/demonstrations/rectangular_wing/lane_a/: aero_analysis.py  drag_polar.py  opt_chord.py  opt_twist.py
oas_mcp/demonstrations/rectangular_wing/lane_b/: run_all.py
oas_mcp/demonstrations/rectangular_wing/lane_c/: README.md
oas_mcp/demonstrations/rectangular_wing/tests/: conftest.py  test_parity.py
oas_mcp/provenance/: TODO_tier3.md  __init__.py  capture.py  cli.py  db.py  tools.py  viewer_server.py
oas_mcp/provenance/viewer/: index.html
oas_mcp/tests/: conftest.py  test_artifacts.py  test_auth.py  test_builders.py  test_cli.py  test_cli_state.py  test_cli_visualization.py  test_composite.py  test_connections.py  test_convergence.py  test_envelope.py  test_flight_conditions.py  test_mesh.py  test_multi_surface.py  test_multipoint.py  test_observability.py  test_provenance.py  test_session.py  test_summary.py  test_telemetry.py  test_tools.py  test_validation.py  test_validators.py  test_viewer_auth.py  test_viewer_routes.py  test_visualization.py  test_viz_parity.py
oas_mcp/tests/golden/: .gitignore  example_parity_values.json  generate_example_parity.py  generate_golden.py  generate_parity.py  test_example_parity.py  test_golden_numerics.py  test_golden_physics.py  test_golden_wingbox.py  test_parity.py
oas_mcp/tools/: __init__.py  _helpers.py  _state.py  analysis.py  artifacts.py  observability.py  optimization.py  prompts.py  resources.py  session_tools.py  surfaces.py
