[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openaerostruct"
dynamic = ["version"]
description = "OpenAeroStruct"
readme = "README.md"
license = { text = "BSD-3" }
requires-python = ">=3.8"
authors = []
keywords = []
dependencies = [
    "openmdao>=3.35,!=3.40",
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib",
]

[project.optional-dependencies]
docs  = ["sphinx_mdolab_theme"]
test  = ["testflo"]
ffd   = ["pygeo>=1.6.0"]
mphys = ["mphys>=2.0.0", "pygeo>=1.15.0"]
mcp   = ["mcp[cli]>=1.0", "python-dotenv>=1.0"]
http  = ["mcp[cli]>=1.0", "uvicorn>=0.27", "PyJWT[crypto]>=2.8", "httpx>=0.27", "python-dotenv>=1.0", "itsdangerous>=2.1"]
all   = ["mphys>=2.0.0", "pygeo>=1.15.0", "sphinx_mdolab_theme", "testflo", "mcp[cli]>=1.0", "uvicorn>=0.27", "PyJWT[crypto]>=2.8", "httpx>=0.27", "python-dotenv>=1.0", "itsdangerous>=2.1"]

[project.urls]
Homepage = "https://github.com/mdolab/OpenAeroStruct"

[project.scripts]
plot_wing    = "openaerostruct.utils.plot_wing:disp_plot"
plot_wingbox = "openaerostruct.utils.plot_wingbox:disp_plot"
oas-mcp      = "oas_mcp.server:main"
oas-cli      = "oas_mcp.cli:main"

[tool.setuptools.dynamic]
version = { attr = "openaerostruct.__version__" }

[tool.setuptools.packages.find]
where   = ["."]
include = ["openaerostruct*", "oas_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths   = ["oas_mcp/tests"]
markers     = [
    "slow: integration tests that run real OAS computations (deselect with -m 'not slow')",
    "golden_physics: Tier-1 physics invariant golden tests (platform-independent)",
    "golden_numerics: Tier-2 numeric baseline golden tests (may vary by platform/deps)",
    "parity: Tier-3 parity tests verifying MCP matches direct OAS integration tests",
    "example_parity: Tier-3 parity tests verifying MCP matches direct OAS example workflows",
]
addopts     = "-v"

[tool.setuptools.package-data]
openaerostruct = ["tests/*.py", "*/tests/*.py", "*/*/tests/*.py"]
oas_mcp = ["*.md", "provenance/viewer/*.html"]
